k8s-configs/cluster-tools/base/monitoring/prometheus/prometheus-job-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-job-exporter
  namespace: prometheus
  labels:
    app: prometheus-job-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus-job-exporter
  template:
    metadata:
      labels:
        app: prometheus-job-exporter
    spec:
      serviceAccountName: prometheus-job-exporter
      containers:
        - name: prometheus-job-exporter
          securityContext:
            runAsGroup: 9999
            runAsNonRoot: true
            runAsUser: 9031
            allowPrivilegeEscalation: false
          image: public.ecr.aws/r2h3l6e4/pingcloud-monitoring/prometheus-job-exporter:v2.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config.yaml
              name: prometheus-job-exporter-config
              subPath: config.yaml
              readOnly: false
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: prometheus-job-exporter-config
          configMap:
            name: prometheus-job-exporter-config

---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-job-exporter
  namespace: prometheus
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/"
    prometheus.io/port: "8000"
    newrelic.io/scrape: "true"
spec:
  selector:
    app: prometheus-job-exporter
  ports:
  - port: 8000
    name: metrics
  clusterIP: None
