k8s-configs/cluster-tools/base/monitoring/prometheus/prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: prometheus
spec:
  selector:
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/name: thanos
    app.kubernetes.io/component: query-frontend
  ports:
  - name: web
    port: 9090
    targetPort: http
  sessionAffinity: ClientIP
