k8s-configs/cluster-tools/base/monitoring/prometheus/prometheus.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
  namespace: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
        image: public.ecr.aws/r2h3l6e4/prom/prometheus:v2.37.0
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.retention.time=$(PROMETHEUS_RETENTION_TIME)"
        volumeMounts:
          - name: prometheus-config-volume
            mountPath: /etc/prometheus/
          - name: prometheus-storage-volume
            mountPath: /prometheus/data
        ports:
        - containerPort: 9090
        resources:
          limits:
            cpu: 500m
            memory: 4000Mi
          requests:
            cpu: 100m
            memory: 512Mi
      volumes:
      - name: prometheus-config-volume
        configMap:
          name: prometheus-config

  volumeClaimTemplates:
  - metadata:
      name: prometheus-storage-volume
      labels:
        app: prometheus
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: efs
      resources:
        requests:
          storage: 1Mi

---

kind: Service
apiVersion: v1
metadata:
  name: prometheus
  namespace: prometheus
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
    name: prometheus
  clusterIP: None
