k8s-configs/cluster-tools/base/monitoring/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: public-prometheus-ingress
  namespace: prometheus
  labels:
    app: prometheus
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-public
spec:
  tls:
    - hosts:
        - prometheus-ext.calvincarter-secondary.ping-demo.com
  rules:
    - host: prometheus-ext.calvincarter-secondary.ping-demo.com
      http:
        paths:
          # This rule gives internal access to the pingaccess admin services.
          - path: /
            backend:
              serviceName: prometheus
              servicePort: 9090
